show navbar in 2 row if screen is less than 640px

--- a/src/components/navbar/navBar.css
+++ b/src/components/navbar/navBar.css
@@ -5,6 +5,17 @@ nav {
   padding-left: 5px;
   padding-right: 5px;
 }
+nav div {
+  display: flex;
+  align-items: center;
+}
+@media screen and (max-width: 600px) {
+
+  nav {
+    height: 120px;
+    flex-direction: column;
+  }
+}
 
 nav .logoWrapper {
   display: flex;
