--- a/src/components/loader/loader.css
+++ b/src/components/loader/loader.css
@@ -8,7 +8,7 @@
     height: 64px;
     margin: 8px;
     border-radius: 50%;
-    background: #cef;
+    background: #F7CB15;
     animation: lds-circle 2.4s cubic-bezier(0, 0.2, 0.8, 1) infinite;
   }
   @keyframes lds-circle {
