--- a/src/scenes/listView/components/beerListItem.css
+++ b/src/scenes/listView/components/beerListItem.css
@@ -22,5 +22,5 @@
     border-radius: 15px;
     margin-bottom: -300px;
     background: #F7CB15;
-    mix-blend-mode: darken;
+    mix-blend-mode: color;
 }
